fix currency nowrap and add .nobr in admin and front, remove usa postcodes from install

--- a/skin/adminhtml/default/default/boxes.css
+++ b/skin/adminhtml/default/default/boxes.css
@@ -1164,7 +1164,7 @@ ul.super-product-attributes {
 .np                 { padding:0 !important; }
 .no-display         { display:none; }
 .no-show            { display:none; }
-.nowrap, nobr       { white-space:nowrap; }
+.nowrap, nobr, .nobr{ white-space:nowrap; }
 .no-float           { float:none !important; }
 .pointer            { cursor:pointer; }
 
