--- a/skin/frontend/default/default/css/boxes.css
+++ b/skin/frontend/default/default/css/boxes.css
@@ -1429,6 +1429,7 @@ tr.grand_total td, p.grand_total { padding-top:5px; padding-bottom:5px; }
 /******************[ Mage_CSS_F Overrides]*******************/
 /************************************************************/
 
+.nowrap, nobr, .nobr{ white-space:nowrap; }
 
 /* Alignment */
 .v-top { vertical-align:top; }
